--- a/MyLoginApp/local.properties
+++ b/MyLoginApp/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 31 11:01:05 ICT 2022
-sdk.dir=C\:\\Users\\Asus\\AppData\\Local\\Android\\Sdk
+#Wed Jan 04 08:54:09 ICT 2023
+sdk.dir=/Users/hakudan/Library/Android/sdk
